# curio

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/: branch-protection.required-checks.json  pull_request_template.md
data/: README.md
docs/: ARCHITECTURE_REQUIREMENTS_DOSSIER.md  DELIVERY_PROTOCOL.md  ENGINEERING_MANIFEST.md  EVAL_STRATEGY.md  INDEX.md  LESSONS_LEARNED.md  PROJECT_STATE.md  PROMPT_REGISTRY.md  RELEASE_PROCESS.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SOURCE_POLICY.md  TEST_STRATEGY.md  UI_UX_GUIDE.md  VALIDATION_PROTOCOL.md  WORKING_AGREEMENT.md
docs/_handoff/: chat_handoff_20260509-1930_m4-end-m5-start.md  chat_handoff_20260509-2030_m4-start.md  chat_handoff_20260509-2030_m5-end-m6-start.md  chat_handoff_20260509-2100_m6-end-m7-start.md  chat_handoff_20260510-1730_m7-end-mvp-complete.md  chat_handoff_20260510-2100_m6e-pilot-content.md  chat_handoff_20260510-2330_m6e-live-phase-a-prep.md
docs/adr/: ADR-0001-markdown-plus-sqlite-registry.md  ADR-0002-immutable-raw-sources.md  ADR-0003-agent-proposals-not-direct-writes.md  ADR-0004-read-only-vps-first.md  ADR-0005-web-ui-read-models.md  ADR-0006-source-policy-and-copyright-boundaries.md  ADR-0007-llm-client-wrapper-and-prompt-registry.md  ADR-0008-search-architecture-staged.md  ADR-0009-registry-schema-versioning.md  README.md  (+10 more)
eval/: README.md  golden-questions.yaml
extracted/: README.md
prompts/: README.md
proposals/: README.md
raw/: README.md
read_models/: README.md
scouts/: unesco-welterbe.yaml
scripts/: backup-windows-vps.ps1  deploy-windows-vps.ps1  dev.ps1  format.ps1  lint.ps1  pull-vps-backups.ps1  quality-gates.ps1  restore-windows-vps.ps1  test.ps1
tests/: conftest.py  test_agents.py  test_aggregations.py  test_api.py  test_browse.py  test_bundle.py  test_capture.py  test_cli.py  test_cli_m1.py  test_cli_m2.py  test_cli_m3.py  test_config.py  test_docs_integrity.py  test_eval_golden.py  test_extraction.py  test_hashing.py  test_health_deep.py  test_ids.py  test_links.py  test_lint.py  test_paths.py  test_proposals_ingest.py  test_read_models.py  test_registry.py  test_scouts_api.py  test_scouts_loader.py  test_scouts_runner.py  test_search.py  test_smoke.py  test_source_policy.py  test_views.py  test_wiki_frontmatter.py  test_wiki_publish.py  test_wiki_slugify.py
tools/: run_quality_gates.py  secret_scan.py  task_runner.py
wiki/: README.md
(+122 files in other folders)
