[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curiosity-wiki"
version = "0.1.0"
description = "Persönliches, quellengestütztes LLM-Wissenssystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Andreas Keis" }]
keywords = ["wiki", "llm", "knowledge", "markdown", "obsidian"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Documentation",
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pydantic>=2.7",
    "trafilatura>=1.12",
    "pypdf>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
curiosity = "curiosity_wiki.cli:main"

[project.urls]
Homepage = "https://github.com/andreaskeis77/curio"
Repository = "https://github.com/andreaskeis77/curio"

# --- setuptools ---

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
curiosity_wiki = ["py.typed"]

# --- pytest ---

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests across layers",
    "llm: tests that touch a real LLM provider (skipped by default)",
]

# --- ruff ---

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — already enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"tools/**" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
